# wasmsand

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  deno.json  package-lock.json  package.json  rust-toolchain.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy-pages.yml  guest-compat.yml
docs/: python-packages.md
docs/guides/: creating-commands.md  extensions.md  mcp-server.md  mounting-files.md  package-manager.md  python-sdk.md  security.md  shell-reference.md  state-persistence.md  syscalls.md  typescript-sdk.md
docs/plans/: 2026-02-21-python-integration-design.md  2026-02-21-wasm-sandbox-implementation-plan.md  2026-02-22-python-sdk-design.md  2026-02-22-python-sdk-impl.md  2026-02-22-rustpython-wasi-integration-plan.md  2026-02-23-hard-kill-worker-design.md  2026-02-23-packaging-design.md  2026-02-23-python-networking-design.md  2026-02-23-resource-limits-fork-routing-impl.md  2026-02-23-shell-network-snapshot-impl.md  2026-02-24-lifo-capabilities-implementation.md  2026-02-24-lifo-inspired-capabilities-spec.md  2026-02-24-sqlite-bc-dc-design.md  2026-02-24-vfs-mount-system-design.md  2026-02-25-package-system-design.md  2026-02-25-sandbox-bugfix-batch-design.md  2026-02-25-sandbox-bugfix-plan.md  2026-03-01-ssrf-redirect-fix-design.md  2026-03-01-ssrf-redirect-fix-plan.md  2026-03-07-fd-only-io-plan.md  2026-03-08-general-sockets-plan.md  2026-03-09-background-jobs-design.md
docs/plans/archive/: 2026-02-21-python-integration-plan.md  2026-02-21-wasm-sandbox-implementation-design.md  2026-02-22-browser-tester-design.md  2026-02-22-browser-tester-plan.md  2026-02-22-coreutils-gap-fill-plan.md  2026-02-22-rustpython-wasi-integration-design.md  2026-02-22-sandbox-api-design.md  2026-02-22-sandbox-api-plan.md  2026-02-23-hard-kill-worker-impl.md  2026-02-23-packaging-impl.md  2026-02-23-python-networking-impl.md  2026-02-23-resource-limits-fork-routing-design.md  2026-02-23-security-mvp-spec.md  2026-02-23-shell-network-snapshot-design.md  2026-02-26-regex-crate-port.md  2026-02-26-rg-coreutil-design.md  2026-02-27-shell-into-sandbox-design.md  2026-02-27-shell-into-sandbox-plan.md  2026-03-01-streaming-pipelines-design.md  2026-03-01-streaming-pipelines-plan.md  2026-03-07-fd-only-io-design.md  2026-03-08-general-sockets-design.md  2026-03-09-background-jobs-plan.md  2026-03-09-posix-completions-plan.md  wasm-ai-sandbox-design.md
docs/superpowers/acceptance/: 2026-04-22-guest-compat-runtime-acceptance.md
docs/superpowers/findings/: 2026-04-22-busybox-testsuite-on-codepod.md  2026-04-22-coreutils-pysuite-on-codepod.md  2026-04-25-busybox-applet-config-map.txt  2026-04-25-busybox-keep-rust-applets.txt  2026-04-25-busybox-migrate-applets.txt
docs/superpowers/plans/: 2026-03-18-sandbox-pooling.md  2026-03-20-document-command-compat.md  2026-03-26-lean-binary-native-bridge.md  2026-03-26-package-registry.md  2026-03-31-cpu-control-timeout.md  2026-04-21-guest-compat-runtime-step-1.md  2026-04-22-guest-compat-phase-b-sysroot.md  2026-04-22-guest-compat-runtime-step-3.md  2026-04-22-guest-compat-runtime-steps-4-5.md  2026-04-25-busybox-as-default-coreutils.md  2026-04-27-kernel-userland-separation.md
docs/superpowers/specs/: 2026-03-18-sandbox-pooling-design.md  2026-03-20-document-command-compat-design.md  2026-03-31-cpu-control-design.md  2026-04-19-c-abi-compatibility-design.md  2026-04-19-guest-compat-runtime-design.md  2026-04-27-kernel-userland-separation-design.md  2026-04-27-wasi-threads-design.md
examples/llm/: copy-wasm.sh  index.html  package.json  vite.config.ts
examples/llm/src/: App.tsx  chat-cli.ts  chat.test.ts  chat.ts  index.css  llm.ts  main.tsx  models.ts  parse.test.ts  parse.ts  prompts.ts  sandbox.ts  types.ts
examples/llm/src/components/: Chat.tsx  IntroDialog.tsx  ModelLoader.tsx  ToolCall.tsx
scripts/: build-c-compat.sh  build-c-port.sh  build-coreutils.sh  build-document-tools.sh  build-mcp.sh  build-sips.sh  build-wheel.sh  copy-wasm.sh  guest-compat-check-coreutils.sh  run-busybox-testsuite-in-sandbox.ts  run-conformance-traces.ts  run-coreutils-pysuite-in-sandbox.ts  run-coreutils-section.ts  smoke-test-mcp.sh  sync-version.sh
