[workspace]
members = [
  "packages/shell",
  "packages/shell-exec",
  "packages/coreutils",
  "packages/pdf-tools",
  "packages/xlsx-tools",
  "packages/test-fixtures/hello",
  "packages/test-fixtures/echo-args",
  "packages/test-fixtures/cat-stdin",
  "packages/test-fixtures/wc-bytes",
  "packages/test-fixtures/true-cmd",
  "packages/test-fixtures/false-cmd",
  # Host binary: Wasmtime-based sandbox server (Option 2 backend)
  "packages/sdk-server-wasmtime",
  # Rust MCP server (wasmtime backend)
  "packages/mcp-server-rust",
  # Process-spawning helpers for coreutils (host_spawn_async/host_waitpid ABI)
  "packages/codepod-process",
  # cpcc clang-wrapper for the guest compatibility runtime (§Toolchain Integration)
  "packages/guest-compat/toolchain/cpcc",
  # Alternate-path Rust sys crate: plain `cargo build --target=wasm32-wasip1` without cargo-codepod
  "packages/guest-compat/rust/codepod-guest-compat-sys",
  # Safe Rust wrappers over the Tier 1 ABI
  "packages/guest-compat/rust/codepod-guest-compat",
  "packages/guest-compat/conformance/rust/dup2-canary",
  "packages/guest-compat/conformance/rust/getgroups-canary",
  "packages/guest-compat/conformance/rust/affinity-canary",
  "packages/guest-compat/conformance/rust/signal-canary",
]
exclude = [
  "packages/sips",
]
resolver = "2"

[workspace.dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893", default-features = false }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893" }
rustpython-derive = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893" }

[profile.release]
lto = true
opt-level = "z"
strip = true
