[workspace]
members = [
  "packages/shell",
  "packages/shell-exec",
  "packages/coreutils",
  "packages/pdf-tools",
  "packages/xlsx-tools",
  "packages/test-fixtures/hello",
  "packages/test-fixtures/echo-args",
  "packages/test-fixtures/cat-stdin",
  "packages/test-fixtures/wc-bytes",
  "packages/test-fixtures/true-cmd",
  "packages/test-fixtures/false-cmd",
  # Host binary: Wasmtime-based sandbox server (Option 2 backend)
  "packages/sdk-server-wasmtime",
  # Rust MCP server (wasmtime backend)
  "packages/mcp-server-rust",
  # Process-spawning helpers for coreutils (host_spawn_async/host_waitpid ABI)
  "packages/codepod-process",
]
exclude = [
  "packages/sips",
  ".worktrees/guest-compat-step-1/packages/rust-ports/grex",
]
resolver = "2"

[workspace.dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893", default-features = false }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893" }
rustpython-derive = { git = "https://github.com/RustPython/RustPython", rev = "f9ca63893" }

[profile.release]
lto = true
opt-level = "z"
strip = true
